2005-01-05  David Vrabel  <dvrabel@arcom.com>

	* src/fs/fileio.c (do_ls): Remove useless "getcwd" message.
	
2004-12-01  Andrea Michelotti  <amichelotti@atmel.com>

	* main.c :
	* mfill.c: 
	* mcmp.c : Changes required for use with GCC v4 - cast as lvalue
	is no longer supported.

2004-11-09  Ian Campbell  <icampbell@arcom.com>

	* cdl/redboot.cdl, doc/redboot_cmds.sgml, src/iomem.c: Add support
	for iopeek and iopoke commands to allow access to the I/O regions.

2004-11-09  David Vrabel  <dvrabel@arcom.com>

	* cdl/redboot.cdl (CYGBLD_REDBOOT_MIN_IMAGE_SIZE): Correct the
	description to match what the option is actually used for.

	* src/flash.c (find_free, fis_free, fis_find_free): Don't ignore
        an extra CYGBLD_REDBOOT_MIN_IMAGE_SIZE amount from the start.
        This fixes the case where nothing uses the start of flash.

2004-11-04  Peter Korsgaard  <jacmet@sunsite.dk>

	* src/fconfig.c (flash_write_config): Removed compiler warning
	when building redboot with combined FIS and config.

2004-10-10	Iztok Zupet	 <iz@elsis.si>

	* cdl/redboot.cdl: added CYGSEM_REDBOOT_DISK_IDE_VMWARE option.
	* src/fs/ide.c : skip reset IDE commands if running under VMware.

2004-10-08  Andrew Lunn  <andrew.lunn@ascom.ch>

	* doc/redboot_installing.sgml: Added links to the tools for the
	Atmel AT91 JTST board.

2004-09-27  Mark Salter  <msalter@redhat.com>

	* src/fs/ide.c (ide_presence_detect): New function.
	* src/fs/disk.c (u32_unaligned): New function to read unaligned words.
	(find_dos_partitions): Use u32_unaligned instead of memcpy.

2004-9-25   Andrew Lunn <andrew.lunn@ascom.ch>

	* doc/redboot_install.sgml: Added installation information for the
	Atmel AT91 JTST board provided by Andrea Michelotti
	
2004-9-23   Bob Koninckx <bob.koninckx@o-3s.com>

	* src/net/tc.c: Removed unneccesary call to MS_TICKS_DELAY

2004-09-19  Mark Salter  <msalter@redhat.com>

	* cdl/redboot.cdl: Add CYGSEM_REDBOOT_NETWORK_INIT_ONE_DEVICE